[fix] main 페이지 카테고리 드롭다운의 z-index가 뒤로 밀리는 문제 및 배경색이 들어가 있지 않는 문제 해결 #37

--- a/client/sass/layout/_navigation.scss
+++ b/client/sass/layout/_navigation.scss
@@ -1,5 +1,6 @@
 @use '../utils/function' as *;
 @use '../abstracts/variables' as *;
+@use '../base/theme' as *;
 
 
 .navigation {
@@ -63,6 +64,8 @@
     visibility: hidden;
     position: absolute;
     top: rem(72px);
+    z-index: 10;
+    background-color: $white;
 
     &__list {
       position: relative;
